Settings Tags update
Settings Tags update
- ClickFilter rename to WidgetTitleFilter
- Add Username/Password settings for remote and command line customization
- Add setting for TopWidgetsOfState

--- a/testar/resources/settings/desktop_swingset2/test.settings
+++ b/testar/resources/settings/desktop_swingset2/test.settings
@@ -87,7 +87,7 @@ ProcessLogs = .*.*
 # these will be added to the protocol_filter.xml file.
 #################################################################
 
-ClickFilter = .*[eE]xit.*|.*Close.*|.*[sS]ave.*|.*Minimize.*
+WidgetTitleFilter = .*[eE]xit.*|.*Close.*|.*[sS]ave.*|.*Minimize.*
 
 #################################################################
 # Processfilter
