create ios structure

--- a/native/build.gradle
+++ b/native/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compile project(':windows')
     compile project(':webdriver')
     compile project(':android')
+    compile project(':ios')
     compile project(':linux')
     compile files('../linux/lib/libatspi.jar')
 }
