--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include 'core', 'native', 'windows', 'testar', 'linux', 'graphdb', 'webdriver', 'android'
+include 'core', 'native', 'windows', 'testar', 'linux', 'graphdb', 'webdriver', 'android', 'ios'
 
