--- a/testar/resources/settings/ios_generic/test.settings
+++ b/testar/resources/settings/ios_generic/test.settings
@@ -96,12 +96,17 @@ SUTProcesses =
 ProtocolClass = ios_generic/Protocol_ios_generic
 
 #################################################################
-# Graphdatabase settings (experimental)
+# State identifier attributes
+#
+# Specify the widget attributes that you wish to use in constructing
+# the widget and state hash strings. Use a comma separated list.
 #################################################################
-GraphDBEnabled = false
-GraphDBUrl =
-GraphDBUser =
-GraphDBPassword =
+AbstractStateAttributes = WidgetControlType
+
+#################################################################
+# Action identifier attributes
+#################################################################
+AbstractActionAttributes = ActionOriginStateAbstractId,ActionOriginWidgetPath,ActionOriginWidgetRole
 
 #################################################################
 # Override display scale
