builds but does not run
Fixed Gradle 7 issues to build, but does not run - throws exception related to threading during populating settings dialog

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-
+apply plugin: 'java'
 subprojects {
     apply plugin: 'java'
     apply plugin: 'jacoco'
@@ -19,7 +19,8 @@ subprojects {
         mavenCentral()
     }
     dependencies {
-        testCompile group:'junit', name:'junit', version:'4.12'
+	// move this dependency to module level build.gradle files?
+        testImplementation 'junit:junit:4.13'
     }
 
     buildDir = new File('./target')
