--- a/linux/build.gradle
+++ b/linux/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile files('./lib/libatspi.jar')
-    compile files('./lib/junit-jupiter-api-5.0.0-M3.jar')
-    compile project(':core')
+    implementation files('./lib/libatspi.jar')
+    implementation files('./lib/junit-jupiter-api-5.0.0-M3.jar')
+    implementation project(':core')
 }
