--- a/webdriver/build.gradle
+++ b/webdriver/build.gradle
@@ -7,8 +7,8 @@ sourceSets {
 }
 
 dependencies {
-    compile project(':core')
+    implementation project(':core')
 
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
 }
