--- a/windows/build.gradle
+++ b/windows/build.gradle
@@ -9,7 +9,8 @@ sourceSets {
 }
 
 dependencies {
-    compile project(':core')
+    implementation project(':core')
+    implementation 'com.google.guava:guava:16+'
 }
 
 task cleanWindows(type: Exec) {
