--- a/testar/resources/workflow/settings/test_gradle_workflow_webdriver_replay/test.settings
+++ b/testar/resources/workflow/settings/test_gradle_workflow_webdriver_replay/test.settings
@@ -27,7 +27,7 @@ Mode = Replay
 # Example format for the dimensions and position : 1920x1000+1680+0
 #################################################################
 SUTConnector = WEB_DRIVER
-SUTConnectorValue = "chromedriver.exe" "https://www.ou.nl"
+SUTConnectorValue = "chromedriver" "https://www.ou.nl"
 
 #################################################################
 # Sequences
