--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,62 +33,62 @@ jobs:
     - name: Prepare installed distribution of TESTAR with Gradle
       run: ./gradlew installDist
     
-    - name: Run desktop_generic protocol with TESTAR using COMMAND_LINE
-      run: ./gradlew runTestDesktopGenericCommandLineOk
-    - name: Save runTestDesktopGenericCommandLineOk HTML report artifact
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        name: runTestDesktopGenericCommandLineOk-artifact
-        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_ok
-    
-    - name: Run desktop_generic protocol that contains SuspiciousTitle with TESTAR
-      run: ./gradlew runTestDesktopGenericCommandLineSuspiciousTitle
-    - name: Save runTestDesktopGenericCommandLineSuspiciousTitle HTML report artifact
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        name: runTestDesktopGenericCommandLineSuspiciousTitle-artifact
-        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_command_and_suspicious
-    
-    - name: Run desktop_generic protocol using specific filtering and detect a SuspiciousTitle with TESTAR
-      run: ./gradlew runTestDesktopGenericCommandLineSettingsFilterSuspiciousTitle
-    - name: Save runTestDesktopGenericCommandLineSettingsFilterSuspiciousTitle HTML report artifact
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        name: runTestDesktopGenericCommandLineSettingsFilterSuspiciousTitle-artifact
-        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_command_settings_filter_and_suspicious
-    
-    - name: Run desktop_generic protocol but connect using SUT_PROCESS_NAME and detect SuspiciousTitle
-      run: ./gradlew runTestDesktopGenericProcessNameSuspiciousTitle
-    - name: Save runTestDesktopGenericProcessNameSuspiciousTitle HTML report artifact
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        name: runTestDesktopGenericProcessNameSuspiciousTitle-artifact
-        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_process_and_suspicious
-    
-    - name: Run desktop_generic protocol but connect using SUT_WINDOW_TITLE and detect SuspiciousTitle
-      run: ./gradlew runTestDesktopGenericTitleNameSuspiciousTitle
-    - name: Save runTestDesktopGenericTitleNameSuspiciousTitle HTML report artifact
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        name: runTestDesktopGenericTitleNameSuspiciousTitle-artifact
-        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_title_and_suspicious
-    
-    - name: Run desktop_generic with OrientDB to infer a TESTAR State Model
-      run: ./gradlew runTestDesktopGenericStateModel
-    - name: Save runTestDesktopGenericStateModel HTML report artifact
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        name: runTestDesktopGenericStateModel-artifact
-        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_state_model
-    
-    - name: Run desktop_generic doing a customization in the AbstractIDCustom identifer
-      run: ./gradlew runTestDesktopGenericStateModelCustomAbstraction
-    - name: Save runTestDesktopGenericStateModelCustomAbstraction HTML report artifact
-      uses: actions/upload-artifact@v2.2.4
-      with:
-        name: runTestDesktopGenericStateModelCustomAbstraction-artifact
-        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_state_model_custom
-    
+#    - name: Run desktop_generic protocol with TESTAR using COMMAND_LINE
+#      run: ./gradlew runTestDesktopGenericCommandLineOk
+#    - name: Save runTestDesktopGenericCommandLineOk HTML report artifact
+#      uses: actions/upload-artifact@v2.2.4
+#      with:
+#        name: runTestDesktopGenericCommandLineOk-artifact
+#        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_ok
+#    
+#    - name: Run desktop_generic protocol that contains SuspiciousTitle with TESTAR
+#      run: ./gradlew runTestDesktopGenericCommandLineSuspiciousTitle
+#    - name: Save runTestDesktopGenericCommandLineSuspiciousTitle HTML report artifact
+#      uses: actions/upload-artifact@v2.2.4
+#      with:
+#        name: runTestDesktopGenericCommandLineSuspiciousTitle-artifact
+#        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_command_and_suspicious
+#    
+#    - name: Run desktop_generic protocol using specific filtering and detect a SuspiciousTitle with TESTAR
+#      run: ./gradlew runTestDesktopGenericCommandLineSettingsFilterSuspiciousTitle
+#    - name: Save runTestDesktopGenericCommandLineSettingsFilterSuspiciousTitle HTML report artifact
+#      uses: actions/upload-artifact@v2.2.4
+#      with:
+#        name: runTestDesktopGenericCommandLineSettingsFilterSuspiciousTitle-artifact
+#        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_command_settings_filter_and_suspicious
+#    
+#    - name: Run desktop_generic protocol but connect using SUT_PROCESS_NAME and detect SuspiciousTitle
+#      run: ./gradlew runTestDesktopGenericProcessNameSuspiciousTitle
+#    - name: Save runTestDesktopGenericProcessNameSuspiciousTitle HTML report artifact
+#      uses: actions/upload-artifact@v2.2.4
+#      with:
+#        name: runTestDesktopGenericProcessNameSuspiciousTitle-artifact
+#        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_process_and_suspicious
+#    
+#    - name: Run desktop_generic protocol but connect using SUT_WINDOW_TITLE and detect SuspiciousTitle
+#      run: ./gradlew runTestDesktopGenericTitleNameSuspiciousTitle
+#    - name: Save runTestDesktopGenericTitleNameSuspiciousTitle HTML report artifact
+#      uses: actions/upload-artifact@v2.2.4
+#      with:
+#        name: runTestDesktopGenericTitleNameSuspiciousTitle-artifact
+#        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_title_and_suspicious
+#    
+#    - name: Run desktop_generic with OrientDB to infer a TESTAR State Model
+#      run: ./gradlew runTestDesktopGenericStateModel
+#    - name: Save runTestDesktopGenericStateModel HTML report artifact
+#      uses: actions/upload-artifact@v2.2.4
+#      with:
+#        name: runTestDesktopGenericStateModel-artifact
+#        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_state_model
+#    
+#    - name: Run desktop_generic doing a customization in the AbstractIDCustom identifer
+#      run: ./gradlew runTestDesktopGenericStateModelCustomAbstraction
+#    - name: Save runTestDesktopGenericStateModelCustomAbstraction HTML report artifact
+#      uses: actions/upload-artifact@v2.2.4
+#      with:
+#        name: runTestDesktopGenericStateModelCustomAbstraction-artifact
+#        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/notepad_state_model_custom
+#    
     - name: Run webdriver protocol and detect SuspiciousTitle
       run: ./gradlew runTestWebdriverSuspiciousTitle
     - name: Save runTestWebdriverSuspiciousTitle HTML report artifact
