--- a/testar/build.gradle
+++ b/testar/build.gradle
@@ -473,7 +473,7 @@ task runTestWebdriverSuspiciousTitle(type: Exec) {
     group = 'test_testar_workflow'
     description ='runTestWebdriverSuspiciousTitle'
     workingDir 'target/install/testar/bin'
-    commandLine 'cmd', '/c', 'cd \ && dir /s *chromedriver*'// && testar sse=test_gradle_workflow_webdriver_generic AlwaysCompile=true ApplicationName="webdriver_and_suspicious" TagsForSuspiciousOracle="NotExist;ValuePattern" SuspiciousTitles=".*[oO]nderwijs.*" ShowVisualSettingsDialogOnStartup=false Mode=Generate Sequences=1 SequenceLength=2'
+    commandLine 'cmd', '/c', 'cd \\ && dir /s *chromedriver*'
     doLast {
         String output = standardOutput.toString()
 
