--- a/testar/resources/workflow/settings/test_gradle_workflow_webdriver_generic/test.settings
+++ b/testar/resources/workflow/settings/test_gradle_workflow_webdriver_generic/test.settings
@@ -27,7 +27,7 @@ Mode = Spy
 # Example format for the dimensions and position : 1920x1000+1680+0
 #################################################################
 SUTConnector = WEB_DRIVER
-SUTConnectorValue = "chromedriver" "1920x900+0+0" "https://www.ou.nl"
+SUTConnectorValue = "node_modules/chromedriver/lib/chromedriver/chromedriver.exe" "1920x900+0+0" "https://www.ou.nl"
 
 #################################################################
 # Sequences
