--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -140,6 +140,20 @@ jobs:
     
     - name: Prepare installed distribution of TESTAR with Gradle
       run: ./gradlew installDist
+      
+    - name: Install latest Chrome
+      run: |
+        sudo apt update
+        sudo apt --only-upgrade install google-chrome-stable
+        google-chrome --version
+        
+    - name: Run webdriver to login in parabank app in linux environment
+      run: ./gradlew runTestWebdriverParabankLoginLinux
+#    - name: Save runTestWebdriverParabankLoginLinux HTML report artifact
+#      uses: actions/upload-artifact@v2.2.4
+#      with:
+#        name: runTestWebdriverParabankLoginLinux-artifact
+#        path: D:/a/TESTAR_dev/TESTAR_dev/testar/target/install/testar/bin/webdriver_login_linux
 
   macos:
     runs-on: macos-latest
