--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ subprojects {
     }
     dependencies {
         testImplementation group:'junit', name:'junit', version:'4.12'
+        implementation 'org.json:json:20211205'
     }
-
     buildDir = new File('./target')
 }
