LogOracle: ignore Postgres init messages
The SUT produces psql error messages during initialization while it
is waiting for the database to come up. These need to be ignored
by the LogOracle, otherwise it will terminate the sequence with a
verdict before the protocol has even logged in on the SUT.

--- a/testar/resources/settings/webdriver_indico1/test.settings
+++ b/testar/resources/settings/webdriver_indico1/test.settings
@@ -207,6 +207,7 @@ MaxInputStrings = 5
 LogOracleEnabled = true
 LogOracleCommands = /data/studie/af/lightweight-codeanalysis/suts/indico/run/save-logs.sh
 LogOracleFiles    = /data/studie/af/lightweight-codeanalysis/suts/indico/run/indico.log
+LogOracleRegex = ".*(?<!psql: )([Ee]xception|[Ee]rror|[Vv]iolation).*"
 
 ResetSUTAfterSequence = true
 VolumesToResetAfterSequence = indicocontainers_customization;indicocontainers_static-files;indicoplain_archive;indicoplain_customization;indicoplain_static-files;indicocontainers_archive
